k8/vmw-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmw-ml-analyzer-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
    - host: ml-analyzer.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmw-ml-analyzer
                port:
                  number: 80
